2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),
	(keyword_model_iter_n_children), (dh_keyword_model_filter): No
	need to go through the hit list constantly in the tree model
	implementation, just keep the result that we already have after
	updating the list.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: The assistant is now used by DhBase so move it
	to the library.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Use G_DEFINE_TYPE_WITH_CODE instead of
	doing by hand.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Whitespace cleanup.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (search_cell_data_func): Use the link instead
	of getting the name directly from the model, saves a copy/free and
	is more consistent with the other properties that we get.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c: (dh_preferences_show_dialog):
	* src/dh-util.[ch]: Rename dh_glade_* to dh_util_glade for
	consistency.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Strip out "()" in
	addition to the previous " ()". Try to be smart for devhelp 1
	files by assuming it's a macro (might need to revert that part
	after testing more devhelp books).

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Fix regression
	introduced recently when parsing devhelp2 files by stripping away
	struct/union/enum even for devhelp2 again.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c (assistant_set_link): Use
	dh_util_build_data_filename to point to the assistant javascript
	and css files. Make the title a link.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: (dh_util_build_data_filename): New function to
	get a filename in devhelp's data directory, works like
	g_build_filename.
